test(g7): keep sync contracts Java 17 compatible